--- a/styles/general.css
+++ b/styles/general.css
@@ -215,7 +215,7 @@ form button{
   background: hsl(322, 100%, 66%);
   font-size: .8rem;
   font-weight: 500;
-  padding: 0.7em 2.1em;
+  padding: 1em 2.3em;
   border-radius: 3px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);
   cursor: pointer;
@@ -268,6 +268,9 @@ i:hover{
   html {
     font-size: 85%;
   }
+  .attribution{
+    font-size: .35rem;
+  }
 }
 
 /* Medium devices (tablets, 768px to 1024px) */
@@ -275,11 +278,26 @@ i:hover{
   html {
     font-size: 90%;
   }
+  .attractive-character h2{
+    font-size: 2rem;
+  }
+  .attractive-character p{
+    width: 30em;
+    margin: 2em auto 0 auto;
+  }
+  .attractive-character{
+    text-align: center;
+  }
+  
   /** Stats **/
   .users-stat{
     display: flex;
     flex-direction: row;
     padding: 0 7%;
+  }
+  .users-stat .stats-number{
+    font-size: 4rem;
+    font-weight: 700;
   }
   /* Services Curvy Part */
   .mobile-curve{
@@ -290,6 +308,7 @@ i:hover{
   }
   .curvy-newsletter{
     margin-bottom: -.2em;
+    padding-bottom: 2em;
   }
   .desktop-curve-footer{
     margin-bottom: -.2em;
@@ -303,6 +322,12 @@ i:hover{
     align-items: center;
     padding: 1.5em 5%;
   }
+  .services-header, .services-detail{
+    text-align: left;
+  }
+  footer{
+    padding: 6em 5em;
+  }
   .flex-end{
     order: 2;
   }
@@ -311,7 +336,7 @@ i:hover{
   }
   .footer-content{
     flex-direction: row;
-    gap: 5.5em;
+    gap: 7em;
   }
   .newsletter{
     order: 2;
